--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Operações Matemáticas</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Qual é o resultado?</h1>
+        <div class="question">
+            <span id="multiplicacao"></span>
+        </div>
+        <div class="answers">
+            <button class="answer-btn" onclick="checkAnswer(this)"></button>
+            <button class="answer-btn" onclick="checkAnswer(this)"></button>
+            <button class="answer-btn" onclick="checkAnswer(this)"></button>
+            <button class="answer-btn" onclick="checkAnswer(this)"></button>
+        </div>
+        <div id="result"></div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
