--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Qual é o resultado?</h1>
         <div class="question">
-            <span id="multiplicacao"></span>
+            <span id="multiplicacao">0 × 0</span>
         </div>
         <div class="answers">
             <button class="answer-btn" onclick="checkAnswer(this)"></button>
@@ -19,9 +19,9 @@
             <button class="answer-btn" onclick="checkAnswer(this)"></button>
         </div>
         <div id="result"></div>
+        <button id="nextButton" onclick="generateQuestion()">Próxima Pergunta</button>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
